--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@material-ui/icons": "^4.2.1",
     "history": "^4.9.0",
     "html-to-react": "^1.3.4",
+    "lodash": "^4.17.15",
+    "lodash.template": "^4.5.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.1",
